--- a/main/search-page-v2.html
+++ b/main/search-page-v2.html
@@ -13,17 +13,83 @@
 
 <body>
 
-    <div class="prod-container"></div>
+    <div class="prod-container">
 
-    <div class="product-grid"></div>
+        <div class="product-grid">
 
-    <div class="card">
-        <img src="/assets/images/lausse-the-cat.jpg" alt="Lausse The Cat" class="card__img">
-        <div class="card__content"></div>
-        <h2 class="card__title"></h2>
-        <p class="card__price"></p>
-        <p class="card__description"></p>
-    </div>
+            <div class="card stacked featured">
+                <img src="/assets/images/lausse-the-cat.jpg" alt="Lausse The Cat" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Lausse The Cat: The Girl The Cat and The Tree</h2>
+                    <p class="card__price">$29.00</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+
+            <div class="card stacked">
+                <img src="/assets/images/mt_mountain_tassels.jpg" alt="Mt Mountain" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Mt Mountain: Tassels</h2>
+                    <p class="card__price">$59.00</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+            <div class="card stacked">
+                <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="Ross from Friends" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Ross From Friends: Aphelion EP</h2>
+                    <p class="card__price">$39.99</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+
+            <div class="card stacked">
+                <img src="/assets/images/velvet_morning_gorilla.jpg" alt="Velvet Morning" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Velvet Morning: Gorilla</h2>
+                    <p class="card__price">$39.99</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+
+            <div class="card stacked">
+                <img src="/assets/images/shred-gnar.jpg" alt="Shred Gnar" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Shred Gnar</h2>
+                    <p class="card__price">$39.99</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+
+
+
+            <div class="card stacked">
+                <img src="/assets/images/self_harm.jpg" alt="Self Harm" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Self Harm</h2>
+                    <p class="card__price">$66.66</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+
+            <div class="card stacked">
+                <img src="/assets/images/saint_cs_kreme.jpg" alt="Saint CS & Kreme" class="card__img">
+                <div class="card__content">
+                    <h2 class="card__title">Saint CS & Kreme</h2>
+                    <p class="card__price">$45.99</p>
+                    <p class="card__description"></p>
+                </div>
+            </div>
+
+        </div>
+
+
 
 </body>
 
