--- a/main/search-page.html
+++ b/main/search-page.html
@@ -15,25 +15,36 @@
 </head>
 
 <body>
-    <div class="main-header">
-        <div><a class="btn btn-primary btn-primary--accent" href="search-page.html">Shop</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Genres</a></div>
-        <!-- <div><a class="btn btn-primary btn-primary--accent" href="#">Product</a></div> -->
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Cart</a></div>
-        <div><a class="btn btn-primary btn-primary--accent" href="#">Info</a></div>
-        <div><a class="btn logo" href="index.html">
-                <img src="/assets/images/oz_music_logo.png"></a></div>
 
-    </div>
+    <header class="header">
+        <h1 class="logo">
+            <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+        </h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
-    <!-- <nav class="sidebar-container">
-        <ul>
-            <li><a href="#" class="active">Contact</a> </li>
-            <li><a href="#">Vinyl</a></li>
-            <li><a href="#">Help</a></li>
-            <li><a href="#">Our Story</a></li>
-        </ul>
-    </nav> -->
+        <nav class="nav">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+
+
+                <li><a class="social-link" href="#"><img class="social-icon"
+                            src="/assets/icons/Facebook_icon_2013.svg.png" alt=""></a></li>
+                <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/icons8-instagram-24.png" alt=""></a></li>
+                <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/logo-youtube.svg" alt=""></a></li>
+
+
+
+
+            </ul>
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+    </header>
+
 
 
     <div class="product-layout">
@@ -41,28 +52,28 @@
             <img src="/assets/images/lausse-the-cat.jpg" alt="">
         </div>
 
-        <div class="product-card"> 
+        <div class="product-card">
             <div class="product-info">
                 <a href=""><img src="/assets/images/mt_mountain_tassels.jpg">
                 </a>
             </div>
         </div>
 
-        <div class="product-card"> 
+        <div class="product-card">
             <div class="product-info">
-                <a href=""><img src=" /assets/images/problems-i-never-learn.jpg">
+                <a href=""><img src="/assets/images/problems-i-never-learn.jpg">
                 </a>
             </div>
         </div>
 
-        <div class="product-card"> 
+        <div class="product-card">
             <div class="product-info">
                 <a href=""><img src="/assets/images/ross-from-friends-aphelion-ep.jpg">
                 </a>
             </div>
         </div>
 
-       
+
 
         <div class="product-card">
             <img src="/assets/images/velvet_morning_gorilla.jpg" alt="">
@@ -89,23 +100,73 @@
             </div>
         </div>
 
-        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="col-3">
+                <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music Memorabilia.We
+                    offer
+                    a large selection of items from the 1950's 1960's 1970's 1980's 1990's and 2000's.
+                     <!-- Genres include:
+                    Rock
+                    - Pop - Soul - Funk - Dance - Alternative - Indie - Metal - Punk - Psych - Progressive - Jazz - Beat
+                    -
+                    Power Pop - Audiophile - Blues - Folk - Reggae - Garage - Country & Western - Classical - World -
+                    Soundtracks.
+                    Our music memorabilia section includes sheet music, tour programs, concert tickets, posters, books,
+                    magazines, and promotional items. -->
+                </p>
+                <!-- <p>We have a large network of contacts and sources of supply, plus many unlisted items. So if you don't find
+                it here, please Send your Want List
+                <strong> BUY QUALITY RECORD COLLECTIONS.</strong> Please Contact us
+                We hope that you will enjoy your visit to our site and that you will return regularly to view our ever
+                changing stock. Thank you. -->
+                <a class="#" href="#"><img class="" src="/assets/icons/icons8-facebook-24.png" alt=""></a>
+                <a href="#"><img src="/assets/icons/icons8-instagram-24.png" alt=""></a>
+                <a href="#"><img src="/assets/icons/icons8-twitter-24.png" alt=""></a>
+                <a href="#"><img src="/assets/icons/icons8-mail-30.png" alt=""></a>
 
 
-        <footer class="main-footer">
-            <div class="container main-footer-container">
-
-                <ul class="nav footer-nav">
-                    <div>
-                        <li>About Us</li>
-                        <li>Information</li>
-                        <li>Contact Us</li>
-                    </div>
-                </ul>
-                <a href="index.html">
-                    <img src="/assets/images/oz_music_logo.png" alt=""></a>
+            </p>
             </div>
-        </footer>
+
+
+            <div class="col-1">
+                <ul class="unstyled-list">
+                    <li><strong>About Us</strong></li>
+                    <li>Our Blog</li>
+                    <li>Contact Us</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                </ul>
+            </div>
+
+
+            <div class="col-1">
+                <ul class="unstyled-list">
+                    <li><strong>Information</strong></li>
+                    <li>Delivery Police</li>
+                    <li>Pickup from our Store</li>
+                    <li>Returns and Cancellation Policy</li>
+                    <li>Terms of Use</li>
+                </ul>
+            </div>
+
+            <div class="col-1">
+                <ul class="unstyled-list">
+                    <li><strong>Contact Us</strong></li>
+                    <li>OZ Music Collectables PO BOX 153
+                        Castle Hill NSW 2154</li>
+                    <li>Phone : (+612) 9634 6741</li>
+                    <li>Email : ozmus@bigpond.net.au</li>
+                    <li>Placeholder</li>
+                </ul>
+            </div>
+            </div>
+    </footer>
+
+
 
 </body>
 
